--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <dtf-header></dtf-header>
-<router-outlet></router-outlet>
+<div class="dtf-container">
+    <div class="row">
+        <div class="col-3">
+            <dtf-sidenav></dtf-sidenav>
+        </div>
+        <div class="col-9">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+
 <dtf-footer></dtf-footer>
