--- a/src/app/layout/sidenav.component.html
+++ b/src/app/layout/sidenav.component.html
@@ -1,3 +1,13 @@
-<p>
-  sidenav works!
-</p>
+<nav class="navigation-section">
+  <ul class="menu-items">
+    <li>
+      <a href="">Summary</a>
+    </li>
+    <li>
+      <a href="">By Party</a>
+    </li>
+    <li>
+      <a href="">By State</a>
+    </li>
+  </ul>
+</nav>
