Added components and further routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <dtf-header></dtf-header>
 <div class="dtf-container">
-    <div class="row">
-        <div class="col-3">
+    <div>
+        <div class="col-1 float-left">
             <dtf-sidenav></dtf-sidenav>
         </div>
-        <div class="col-9">
+        <div class="col-11 float-left">
             <router-outlet></router-outlet>
         </div>
     </div>
 </div>
-
 <dtf-footer></dtf-footer>
