--- a/src/app/layout/sidenav.component.html
+++ b/src/app/layout/sidenav.component.html
@@ -1,13 +1,7 @@
 <nav class="navigation-section">
-  <ul class="menu-items">
-    <li>
-      <a href="">Summary</a>
-    </li>
-    <li>
-      <a href="">By Party</a>
-    </li>
-    <li>
-      <a href="">By State</a>
-    </li>
-  </ul>
+  <div class="menu-items">
+      <a href="#/summary">Summary</a>
+      <a href="#/by-party">By Party</a>
+      <a href="#/by-state">By State</a>
+  </div>
 </nav>
