minor style changes

--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,16 +1,16 @@
 <div>
     <div class="row">
-        <div class="col-6">
+        <div class="col-5 m-2">
             <chart [options]="optionsSeatsWons"></chart>
         </div>
-        <div class="col-6">
+        <div class="col-5 m-2">
             <chart [options]="optionsVotesPolled"></chart>
         </div>
     </div>
-    <div class="col-12">
+    <div class="col-12 mt-2">
         <chart [options]="stackedColumnChartByState"></chart>
     </div>
-    <div class="col-12">
+    <div class="col-12 mt-2">
         <chart [options]="stackedColumnChartByVotes"></chart>
     </div>
 </div>
