Added ddl and icon

--- a/src/app/components/party/party.component.html
+++ b/src/app/components/party/party.component.html
@@ -1,3 +1,5 @@
-<p>
-  party works!
-</p>
+<div class="row">
+  <select class="dropdown form-control">
+    <option *ngFor="let party of parties">{{party.partyName}}</option>
+  </select>
+</div>
