--- a/src/app/components/state/state.component.html
+++ b/src/app/components/state/state.component.html
@@ -1,3 +1,5 @@
-<p>
-  state works!
-</p>
+<div class="row">
+  <select class="dropdown form-control">
+    <option *ngFor="let state of states">{{state.stateName}}</option>
+  </select>
+</div>
