--- a/src/app/components/party/party.component.html
+++ b/src/app/components/party/party.component.html
@@ -1,5 +1,9 @@
 <div class="row">
-  <select class="dropdown form-control">
-    <option *ngFor="let party of parties">{{party.partyName}}</option>
+  <select [(ngModel)]="selectedParty" (change)="onPartySelected()" class="dropdown form-control">
+    <option *ngFor="let party of parties" [ngValue]="party.partyName">{{party.partyName}}</option>
   </select>
+</div>
+<div class="row mt-3">
+  <div class="col-4"></div>
+  <div class="col-8"></div>
 </div>
