--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -10,7 +10,7 @@
     <div class="col-12 mt-2">
         <chart [options]="stackedColumnChartByState"></chart>
     </div>
-    <div class="col-12 mt-2">
+    <div class="col-12 my-2">
         <chart [options]="stackedColumnChartByVotes"></chart>
     </div>
 </div>
