--- a/src/app/layout/footer.component.css
+++ b/src/app/layout/footer.component.css
@@ -1,4 +1,14 @@
 .dtf-footer{
     height: 2rem;
     background: white;
+    box-shadow: 0 1px 6px rgba(57,73,76,0.35);
+}
+.dtf-footer span{
+    float: right;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: #2b908f;
+    padding-top: 0.5rem; 
+    padding-right: 0.5rem;
+    font-style: italic;
 }
