--- a/src/app/layout/sidenav.component.css
+++ b/src/app/layout/sidenav.component.css
@@ -23,3 +23,9 @@
   background: white;
   border: 0.5px solid #2b908f;
 }
+
+.active{
+  color:#2b908f !important;
+  background: white !important;
+  border: 0.5px solid #2b908f !important;
+}
