--- a/src/app/layout/sidenav.component.html
+++ b/src/app/layout/sidenav.component.html
@@ -1,7 +1,7 @@
 <nav class="navigation-section">
   <div class="menu-items">
-      <a href="#/summary">Summary</a>
-      <a href="#/by-party">By Party</a>
-      <a href="#/by-state">By State</a>
+      <a [routerLinkActive]="['active']" [routerLink]="['summary']">Summary</a>
+      <a [routerLinkActive]="['active']" [routerLink]="['by-party']">By Party</a>
+      <a [routerLinkActive]="['active']" [routerLink]="['by-state']">By State</a>
   </div>
 </nav>
