--- a/src/app/layout/header.component.html
+++ b/src/app/layout/header.component.html
@@ -1,3 +1,3 @@
 <header class="header">
-    <h1>GENERAL ELECTION 2014 DASHBOARD</h1>
+    <!-- <h1>GENERAL ELECTION 2014 DASHBOARD</h1> -->
 </header>
